--- a/house.gov.by/3b91cb8d0e15c5e1e63d274aea80d6eb4e441e68.yml
+++ b/house.gov.by/3b91cb8d0e15c5e1e63d274aea80d6eb4e441e68.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 19:19:41 GMT
+    - Thu, 26 Oct 2017 21:44:58 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=512g22ctbs034cm0je25666401; path=/
+    - PHPSESSID=ev7qfk7edl4ro0dr2k3k3igas1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 19:19:41 GMT
+recorded_at: Thu, 26 Oct 2017 21:44:58 GMT
