--- a/house.gov.by/7f75d2d1e80e6aa5f8fe0e4e78721b8f4b7d2d4e.yml
+++ b/house.gov.by/7f75d2d1e80e6aa5f8fe0e4e78721b8f4b7d2d4e.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 20:36:59 GMT
+    - Fri, 27 Oct 2017 01:21:16 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=07ufncbl9veon00mh02svojc85; path=/
+    - PHPSESSID=v235niva6e8n39je2bub242ve1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 20:37:00 GMT
+recorded_at: Fri, 27 Oct 2017 01:21:17 GMT
