--- a/house.gov.by/cfd30729c5aa2b5af72e0e2251bb4620a2d190bb.yml
+++ b/house.gov.by/cfd30729c5aa2b5af72e0e2251bb4620a2d190bb.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 20:22:27 GMT
+    - Fri, 27 Oct 2017 01:29:56 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=51crdmjfle8f79g18v04lk0mj4; path=/
+    - PHPSESSID=sn405a2bje58idppfo6i249un1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 20:22:28 GMT
+recorded_at: Fri, 27 Oct 2017 01:29:57 GMT
