--- a/house.gov.by/19e6e7e38c36b9903d45df4a99cf37b90e06a361.yml
+++ b/house.gov.by/19e6e7e38c36b9903d45df4a99cf37b90e06a361.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 21:30:34 GMT
+    - Fri, 27 Oct 2017 01:33:42 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=49qvque69iuko10lmlsskrg7h4; path=/
+    - PHPSESSID=c42m9ud1488sqaiirca2gar7k6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 21:30:35 GMT
+recorded_at: Fri, 27 Oct 2017 01:33:44 GMT
