--- a/house.gov.by/3b91cb8d0e15c5e1e63d274aea80d6eb4e441e68.yml
+++ b/house.gov.by/3b91cb8d0e15c5e1e63d274aea80d6eb4e441e68.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 21:44:58 GMT
+    - Fri, 27 Oct 2017 01:40:59 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=ev7qfk7edl4ro0dr2k3k3igas1; path=/
+    - PHPSESSID=j3235s133te825ksrv5g8jsqe5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 21:44:58 GMT
+recorded_at: Fri, 27 Oct 2017 01:40:59 GMT
