--- a/house.gov.by/6faca62c0613d3a29f1eeec515b433b3da10435f.yml
+++ b/house.gov.by/6faca62c0613d3a29f1eeec515b433b3da10435f.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 21:23:57 GMT
+    - Fri, 27 Oct 2017 01:51:06 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=a67vbei490rebiqrruo1r2joq2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 21:23:57 GMT
+recorded_at: Fri, 27 Oct 2017 01:51:07 GMT
