--- a/house.gov.by/056d7ac32a3021e1e115ec3c4b54f9fd094a228c.yml
+++ b/house.gov.by/056d7ac32a3021e1e115ec3c4b54f9fd094a228c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 21:41:00 GMT
+    - Fri, 27 Oct 2017 01:51:37 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=ueodlo9ubnlrp2vi9g0hq9mer6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 21:41:00 GMT
+recorded_at: Fri, 27 Oct 2017 01:51:39 GMT
