--- a/house.gov.by/ececcc5f7fc294e39414b4bd63fc9da75f48b6aa.yml
+++ b/house.gov.by/ececcc5f7fc294e39414b4bd63fc9da75f48b6aa.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 20:49:27 GMT
+    - Fri, 27 Oct 2017 02:07:07 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=narihi891r0n61403r494cqlc3; path=/
+    - PHPSESSID=mse840gv6s3kd1riu4kglbtvl3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 20:49:27 GMT
+recorded_at: Fri, 27 Oct 2017 02:07:08 GMT
