--- a/house.gov.by/8e5f8de4b34941007456395437e0ed8be2cf2bc9.yml
+++ b/house.gov.by/8e5f8de4b34941007456395437e0ed8be2cf2bc9.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 21:08:45 GMT
+    - Fri, 27 Oct 2017 02:15:48 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=pqsqgrkvfaf0ktuh95cj7hh2f6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 21:08:45 GMT
+recorded_at: Fri, 27 Oct 2017 02:15:48 GMT
