--- a/house.gov.by/21b9e23de458f0cc56f922a22b261011eada96c6.yml
+++ b/house.gov.by/21b9e23de458f0cc56f922a22b261011eada96c6.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 21:43:39 GMT
+    - Fri, 27 Oct 2017 02:36:55 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=rt3sbksgt39i4gojiruq6g9kt2; path=/
+    - PHPSESSID=5mvf5smjrb4cdinc1q3j3meio5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 21:43:42 GMT
+recorded_at: Fri, 27 Oct 2017 02:36:57 GMT
