--- a/house.gov.by/112adc08aa09be034f549c3a1c75bccb1324aeec.yml
+++ b/house.gov.by/112adc08aa09be034f549c3a1c75bccb1324aeec.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 20:29:01 GMT
+    - Fri, 27 Oct 2017 02:41:49 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=pllmfeir5kkrrcu1cq5oentm92; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 20:29:01 GMT
+recorded_at: Fri, 27 Oct 2017 02:41:50 GMT
