--- a/house.gov.by/eba9dcf24b9e436be091da41152b7bee4250a607.yml
+++ b/house.gov.by/eba9dcf24b9e436be091da41152b7bee4250a607.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 21:19:36 GMT
+    - Fri, 27 Oct 2017 02:51:42 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=gr10t82k7qo4296235p2hqir84; path=/
+    - PHPSESSID=0ho1gsoa6kt6vtagr65dkrppv2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 21:19:37 GMT
+recorded_at: Fri, 27 Oct 2017 02:51:43 GMT
