--- a/house.gov.by/1a9765cc5d4cafefd5c57da3a6c44b7d48af7ee3.yml
+++ b/house.gov.by/1a9765cc5d4cafefd5c57da3a6c44b7d48af7ee3.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 01:35:39 GMT
+    - Fri, 27 Oct 2017 03:03:14 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=jits2kv5h5hame9qbnqal405o6; path=/
+    - PHPSESSID=s3f2f61tul9im9jid2j0j5s626; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 01:35:39 GMT
+recorded_at: Fri, 27 Oct 2017 03:03:15 GMT
