--- a/house.gov.by/35350fb47d5a65216e747050ae245f4df20ac274.yml
+++ b/house.gov.by/35350fb47d5a65216e747050ae245f4df20ac274.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 02:46:03 GMT
+    - Fri, 27 Oct 2017 03:08:21 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=2ee1tm5fg2phlvtlk3rkqjlg93; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 02:46:03 GMT
+recorded_at: Fri, 27 Oct 2017 03:08:21 GMT
