--- a/house.gov.by/67264dbb9e3cb974cdf5fbac85e5c34f3abbbc7b.yml
+++ b/house.gov.by/67264dbb9e3cb974cdf5fbac85e5c34f3abbbc7b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 01:54:18 GMT
+    - Fri, 27 Oct 2017 03:18:11 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=5ce3fgn0s3ick05bmc2i0n4ks4; path=/
+    - PHPSESSID=63a9d7bfa7sv3d6js3b1n4onq6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 01:54:19 GMT
+recorded_at: Fri, 27 Oct 2017 03:18:11 GMT
