--- a/house.gov.by/8e5f8de4b34941007456395437e0ed8be2cf2bc9.yml
+++ b/house.gov.by/8e5f8de4b34941007456395437e0ed8be2cf2bc9.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 02:15:48 GMT
+    - Fri, 27 Oct 2017 03:23:54 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=9iomq3qe896slm7nae35p9j4k0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 02:15:48 GMT
+recorded_at: Fri, 27 Oct 2017 03:23:55 GMT
