--- a/house.gov.by/89ff0502719991830a86af426f1d021d7bacf111.yml
+++ b/house.gov.by/89ff0502719991830a86af426f1d021d7bacf111.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 02:49:18 GMT
+    - Fri, 27 Oct 2017 03:31:08 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=qmn4tq2pemv1645m2vn68r83q5; path=/
+    - PHPSESSID=busak39e06r5d9kcsitbm48np6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 02:49:19 GMT
+recorded_at: Fri, 27 Oct 2017 03:31:10 GMT
