--- a/house.gov.by/dc1c147be8c59110ac14e73189251cdb61ecb95c.yml
+++ b/house.gov.by/dc1c147be8c59110ac14e73189251cdb61ecb95c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 02:36:04 GMT
+    - Fri, 27 Oct 2017 03:34:53 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=v35npdl9o7aa9j38kd4bgapfr1; path=/
+    - PHPSESSID=k8a98hfaj2js6vi5jqd04hb6q1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 02:36:05 GMT
+recorded_at: Fri, 27 Oct 2017 03:34:53 GMT
