--- a/house.gov.by/71fb5731d3fdf8b08db7b112a5a1fefb5d1ecc0c.yml
+++ b/house.gov.by/71fb5731d3fdf8b08db7b112a5a1fefb5d1ecc0c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 02:30:20 GMT
+    - Fri, 27 Oct 2017 03:37:18 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=24m1p0c5aetlqpjhlg822r0s25; path=/
+    - PHPSESSID=doj059habkq4uu5t8lmrrv1h15; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 02:30:21 GMT
+recorded_at: Fri, 27 Oct 2017 03:37:19 GMT
