--- a/house.gov.by/9c2d88cc13bd506ceba3c56e083f7cb1e73ee076.yml
+++ b/house.gov.by/9c2d88cc13bd506ceba3c56e083f7cb1e73ee076.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 02:17:16 GMT
+    - Fri, 27 Oct 2017 03:50:40 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=3saart79fi8mr116urvh0o6do4; path=/
+    - PHPSESSID=5ir77lcf8hn8a62bukjcmll7s7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 02:17:17 GMT
+recorded_at: Fri, 27 Oct 2017 03:50:41 GMT
