--- a/house.gov.by/8b5ca28f81b46336cbf4376e4824fa6d31e21f74.yml
+++ b/house.gov.by/8b5ca28f81b46336cbf4376e4824fa6d31e21f74.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 01:53:27 GMT
+    - Fri, 27 Oct 2017 04:02:03 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=0acbehp64tgor947m1u1o9g931; path=/
+    - PHPSESSID=5v2fm2lik8nsfg9ploclr8qo54; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 01:53:29 GMT
+recorded_at: Fri, 27 Oct 2017 04:02:05 GMT
